--- a/FAQ.html
+++ b/FAQ.html
@@ -22,13 +22,7 @@ layout: default
 	</div>
 
 	<div class='qa'>
-	<p class='question'><b>Q: Do you update your old posts?</b></p>
-	<p><b>A:</b> Yes, I update my old posts periodically. Everytime I would add an one-line update message in blue on top of that post, like:<br/><image src={{ '/assets/images/example-update.png' | relative_url }} style='width:75%'/>
-	</p>
-	</div>
-
-	<div class='qa'>
-	<p class='question'><b>Q: How do you get one when you don't have any research experience?</b></p>
+	<p class='question'><b>Q: How do you get a research intern when you don't have any research experience?</b></p>
 	<p><b>A:</b> The best method is to get some research at your home institution first. However, getting your first research experience outside is also very common. In either case, the process of applying is the same. So apply to both simultaneously.
 	</p>
 	</div>
