ADD Research Program

--- a/FAQ.html
+++ b/FAQ.html
@@ -6,6 +6,8 @@ layout: default
 
   	<h1 class="page-heading">Frequently Asked Questions</h1>
 
+    <h2 class="page-heading">Research Intern application</h2>
+
 	<div class='qa'>
 	<p class='question'><b>Q: How do I go about applying for a research internship?</b></p>
 	<p><b>A:</b> Go through websites of professors and identify profs you'll be interested in working with. Email them - introducing yourself and conveying about your interest in working with them.</p>
@@ -24,6 +26,20 @@ layout: default
 	<div class='qa'>
 	<p class='question'><b>Q: How do you get a research intern when you don't have any research experience?</b></p>
 	<p><b>A:</b> The best method is to get some research at your home institution first. However, getting your first research experience outside is also very common. In either case, the process of applying is the same. So apply to both simultaneously.
+	</p>
+	</div>
+
+  <div class='qa'>
+	<p class='question'><b>Q: Besides emailing, what programs should I apply to?</b></p>
+	<p><b>A:</b> Apply to the following programs:
+    <ul>
+        <li> Summer Research Fellowship Program (SRFP)
+        <li> Fast - SF (Similar to SRFP but specially for students from East Indian Universities)
+        <li> Individual programs from IITs
+        <li> MITACS Globalink (3rd Year Students only)
+        <li> DAAD Intern (3rd Year Students only)
+        <li> Charpak Scholarships (3rd Year Students only)
+    </ul>
 	</p>
 	</div>
 
