Try different heading

--- a/FAQ.html
+++ b/FAQ.html
@@ -6,7 +6,7 @@ layout: default
 
   	<h1 class="page-heading">Frequently Asked Questions</h1>
 
-    <h2 class="page-heading">Research Intern application</h2>
+    <h2>Research Intern application</h2>
 
 	<div class='qa'>
 	<p class='question'><b>Q: How do I go about applying for a research internship?</b></p>
